Fix TOS component text alignment when viewport changes

--- a/projects/js-packages/components/components/pricing-table/styles.module.scss
+++ b/projects/js-packages/components/components/pricing-table/styles.module.scss
@@ -128,26 +128,22 @@
 
 .tos {
 	text-align: center;
-	width: fit-content;
 
 	> a {
 		color: black;
 	}
 
 	.is-viewport-large & {
-		padding-left: var( --padding );
-		padding-right: var( --padding );
-		grid-column: 2;
-		white-space: nowrap;
-		overflow: hidden;
+		text-align: center;
+		grid-column: 2 / span 2;
 	}
 }
 
 .tos-container {
 	.is-viewport-large & {
 		display: grid;
-		grid-template-columns: repeat( var( --columns ), 1fr );
+		grid-template-columns: repeat( var( --columns ), 1fr);
 		grid-auto-flow: column;
-		column-gap: var( --gap );
+		column-gap: calc( var( --spacing-base ) * 3 );
 	}
 }
